--- a/domain.yml
+++ b/domain.yml
@@ -32,6 +32,7 @@ responses:
       title: Sad
     image: https://i.imgur.com/nGF1K8f.jpg
     text: 'Here is something to cheer you up:'
+  - text: Content d'entendre ca
   utter_did_that_help:
   - text: Did that help you?
   utter_happy:
